--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@radix-icons/vue": "^1.0.0",
     "@tanstack/vue-query": "^5.59.17",
+    "@vee-validate/zod": "^4.14.6",
+    "@vueuse/core": "^11.2.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
     "nuxt": "^3.13.2",
     "prettier": "^3.3.3",
+    "radix-vue": "^1.9.8",
     "shadcn-nuxt": "^0.10.4",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.14.6",
     "vue": "latest",
     "vue-router": "latest",
-    "yup": "^1.4.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5.6.3"
