--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vueuse/core": "^11.2.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
+    "dayjs": "^1.11.13",
+    "lucide-vue-next": "^0.454.0",
     "nuxt": "^3.13.2",
     "prettier": "^3.3.3",
     "radix-vue": "^1.9.8",
